# openwhoop

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: rust-ci.yml
notebooks/: imu-data.ipynb  sleep-detection.ipynb
src/db-entities/: Cargo.toml
src/db-entities/src/: activities.rs  heart_rate.rs  lib.rs  prelude.rs  sleep_cycles.rs
src/openwhoop/: Cargo.toml
src/openwhoop-algos/: Cargo.toml
src/openwhoop-algos/src/: activity.rs  exercise.rs  lib.rs  sleep.rs  sleep_consistency.rs  spo2.rs  strain.rs  stress.rs  temperature.rs
src/openwhoop-algos/src/helpers/: format_hm.rs  time_math.rs
src/openwhoop-codec/: Cargo.toml
src/openwhoop-codec/src/: constants.rs  error.rs  helpers.rs  lib.rs  packet.rs  packet_implementations.rs  whoop_data.rs
src/openwhoop-codec/src/whoop_data/: history.rs
src/openwhoop-db/: Cargo.toml
src/openwhoop-db/src/: db.rs  lib.rs  sync.rs
src/openwhoop-db/src/algo_impl/: mod.rs  sleep.rs  spo2.rs  stress.rs  temperature.rs
src/openwhoop-db/src/type_impl/: activities.rs  history.rs  mod.rs
src/openwhoop-entities/: Cargo.toml
src/openwhoop-entities/src/: activities.rs  heart_rate.rs  packets.rs  prelude.rs  sleep_cycles.rs
src/openwhoop-migration/: Cargo.toml
src/openwhoop-migration/src/: lib.rs  m20220101_000001_create_packets.rs  m20250111_123805_heart_rate.rs  m20250126_200014_alter_heart_rate.rs  m20250127_195808_sleep_cycles.rs  m20250202_085524_activities.rs  m20250402_092421_alter_sleep.rs  m20250527_094353_imu_data.rs  m20250601_000000_add_synced.rs  m20250602_000000_sensor_data.rs  m20250602_000001_spo2.rs  m20250603_000000_skin_temp.rs  main.rs
src/openwhoop-types/: Cargo.toml
src/openwhoop-types/src/: activities.rs
src/openwhoop/src/: algo.rs  api.rs  db.rs  device.rs  lib.rs  main.rs  openwhoop.rs
src/openwhoop/src/algo/: activity.rs  exercise.rs  sleep.rs  sleep_consistency.rs  stress.rs
src/openwhoop/src/db/: history.rs
src/openwhoop/src/helpers/: mod.rs  time_math.rs
src/openwhoop/src/types/: activities.rs
src/sea-migrations/: Cargo.toml
src/sea-migrations/src/: lib.rs  m20250111_123805_heart_rate.rs  m20250127_195808_sleep_cycles.rs  m20250202_085524_activities.rs  m20250214_202918_alter_heart_rate_stress.rs
src/whoop/: Cargo.toml
src/whoop/src/: constants.rs  error.rs  helpers.rs  lib.rs  packet.rs  packet_implementations.rs  whoop_data.rs
src/whoop/src/whoop_data/: history.rs
