[workspace]
members = [
    "src/openwhoop-codec",
    "src/openwhoop-migration",
    "src/openwhoop-entities",
    "src/openwhoop",
    "src/openwhoop-algos",
    "src/openwhoop-types",
    "src/openwhoop-db",
]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
hex = "0.4.3"
sea-orm = "1.1.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.16.0", features = ["v4"] }
thiserror = "2.0.11"
async-std = { version = "1", features = ["attributes", "tokio1"] }
base64 = "0.22"
btleplug = "0.11.7"
clap = { version = "4.5.26", features = ["env", "derive"] }
clap_complete = "4.5.50"
ctrlc = "3.4.7"
dotenv = { version = "0.15.0", features = ["clap", "cli"] }
env_logger = "0.11.6"
futures = "0.3.31"
indicatif = "0.17"
log = "0.4.24"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sea-orm-migration = { version = "1.1.0", features = ["runtime-tokio-rustls", "sqlx-sqlite", "sqlx-postgres"] }
strum = "0.26.3"
zip = "2"

openwhoop-algos = { path = "src/openwhoop-algos" }
openwhoop-codec = { path = "src/openwhoop-codec" }
openwhoop-db = { path = "src/openwhoop-db" }
openwhoop-entities = { path = "src/openwhoop-entities" }
openwhoop-migration = { path = "src/openwhoop-migration" }
openwhoop-types = { path = "src/openwhoop-types" }