[package]
name = "openwhoop-db"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
openwhoop-entities = { version = "0.1.0", path = "../openwhoop-entities" }
openwhoop-algos = { version = "0.1.0", path = "../openwhoop-algos" }
openwhoop-migration = { version = "0.1.0", path = "../openwhoop-migration" }
openwhoop-types = { version = "0.1.0", path = "../openwhoop-types" }
indicatif = "0.17"
sea-orm = "1.1.8"
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["v4"] }
openwhoop-codec = { version = "0.1.0", path = "../openwhoop-codec" }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
