[package]
name = "openwhoop-db"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
indicatif.workspace = true
openwhoop-algos.workspace = true
openwhoop-codec.workspace = true
openwhoop-entities.workspace = true
openwhoop-migration.workspace = true
openwhoop-types.workspace = true
sea-orm.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
