[package]
name = "openwhoop"
version = "0.1.0"
edition = "2021"
default-run = "openwhoop"

[dependencies]
anyhow = "1.0.95"
btleplug = "0.11.7"
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["env", "derive"] }
db-entities = { version = "0.1.0", path = "../db-entities" }
dotenv = { version = "0.15.0", features = ["clap", "cli"] }
env_logger = "0.11.6"
futures = "0.3.31"
hex = "0.4.3"
log = "0.4.24"
migration.path = "../sea-migrations"
sea-orm = "1.1.4"
serde = "1.0.217"
serde_json = "1.0.138"
strum = "0.26.3"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.11.1", features = ["v4"] }
whoop = { version = "0.1.0", path = "../whoop" }
