[package]
name = "openwhoop"
version = "0.1.0"
edition = "2024"
default-run = "openwhoop"

[dependencies]
anyhow = "1.0.95"
btleplug = "0.11.7"
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["env", "derive"] }
ctrlc = "3.4.7"
openwhoop-entities = { version = "0.1.0", path = "../openwhoop-entities" }
dotenv = { version = "0.15.0", features = ["clap", "cli"] }
env_logger = "0.11.6"
futures = "0.3.31"
hex = "0.4.3"
log = "0.4.24"
openwhoop-algos = { version = "0.1.0", path = "../openwhoop-algos" }
openwhoop-db = { version = "0.1.0", path = "../openwhoop-db" }
openwhoop-migration.path = "../openwhoop-migration"
openwhoop-types = { version = "0.1.0", path = "../openwhoop-types" }
sea-orm = "1.1.4"
serde = "1.0.217"
serde_json = "1.0.138"
strum = "0.26.3"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.11.1", features = ["v4"] }
openwhoop-codec = { version = "0.1.0", path = "../openwhoop-codec" }
clap_complete = "4.5.50"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
base64 = "0.22"
zip = "2"